docs(pages): fix scrolling issues on smaller displays

--- a/docs/assets/css/swingletree.scss
+++ b/docs/assets/css/swingletree.scss
@@ -24,3 +24,7 @@ h1,h2,h3,h4 {
     color: #61828f;
   }
 }
+
+.footer {
+  font-size: .65em;
+}
